// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ignore location Check order of entries when location is ignored 1`] = `
Array [
  Object {
    "item": "beforeEach",
    "refIndex": 0,
    "score": 0,
  },
  Object {
    "item": "async beforeEach test",
    "refIndex": 1,
    "score": 0.01857804455091699,
  },
  Object {
    "item": "assert.async in beforeEach",
    "refIndex": 2,
    "score": 0.01857804455091699,
  },
  Object {
    "item": "Module with Promise-aware beforeEach",
    "refIndex": 3,
    "score": 0.03162277660168379,
  },
  Object {
    "item": "Promise-aware return values without beforeEach/afterEach",
    "refIndex": 4,
    "score": 0.045603691595129614,
  },
  Object {
    "item": "before",
    "refIndex": 5,
    "score": 0.4,
  },
  Object {
    "item": "before (skip)",
    "refIndex": 6,
    "score": 0.5231863610884103,
  },
]
`;

exports[`Ignore location Check order of entries when location is not ignored 1`] = `
Array [
  Object {
    "item": "beforeEach",
    "refIndex": 0,
    "score": 0,
  },
  Object {
    "item": "async beforeEach test",
    "refIndex": 1,
    "score": 0.1972392177586917,
  },
  Object {
    "item": "before",
    "refIndex": 5,
    "score": 0.4,
  },
  Object {
    "item": "assert.async in beforeEach",
    "refIndex": 2,
    "score": 0.4493775633055149,
  },
  Object {
    "item": "before (skip)",
    "refIndex": 6,
    "score": 0.5231863610884103,
  },
  Object {
    "item": "Module with Promise-aware beforeEach",
    "refIndex": 3,
    "score": 0.5916079783099616,
  },
  Object {
    "item": "Promise-aware return values without beforeEach/afterEach",
    "refIndex": 4,
    "score": 0.699819425905295,
  },
]
`;
